LogAnalyzer ya con comentarios ReportGenerator ya con comentarios
Arreglado el problema de LogAnalyzer que no se llamaba a los metodos en "count" y "report".